--- a/index.html
+++ b/index.html
@@ -135,18 +135,19 @@
   </main>
   <footer>
     <footer>
-      <div class="logo">LOGO</div>
-      <p>Ready to elevate your online presence? Contact us to discuss your project.</p>
-      <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">How it Works</a>
-        <a href="#">Services</a>
-      </nav>
-    </footer>
-  </body>
-  </html>
-  </footer>
+        <div class="logo footer-logo">LOGO</div>
+        <p>
+          Ready to elevate your online presence? Contact us today to discuss<br>
+          your project and discover how we can bring your vision to life.
+        </p>
+        <nav>
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">How it Works</a>
+          <a href="#">Services</a>
+        </nav>
+      </footer>
+      
 
 </body>
 </html>
